# openvaccine

./: .gitignore  LICENSE  README.md  pyproject.toml
openvaccine/: common.py  data.py  finetune.py  main.py  model.py  pretrain.py  train.py
tests/: test_model.py
